package com.app.cleanarchitecturenoteapp.core

object TestTag {
    const val ORDER_SECTION = "orderSection"
    const val TITLE_TEXT_FIELD: String = "TITLE_TEXT_FIELD"
    const val CONTENT_TEXT_FIELD: String = "CONTENT_TEXT_FIELD"
    const val NOTE_ITEM: String = "NOTE_ITEM"
}